# formative

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: build_and_release_frontend.yml  release.yml  test_backend.yml
backend/: Dockerfile  Pipfile  pyproject.toml
backend/src/: main.py  pyproject.toml
backend/src/domain/: group.py  role.py  user.py
backend/src/domain/exceptions/: incorrect_password_exception.py  role_not_found_exception.py  user_not_found_exception.py
backend/src/infrastructure/api/: app.py  lifespan.py  service.py  transaction.py
backend/src/infrastructure/api/controllers/: authentication_controller.py  group_controller.py  role_controller.py  user_controller.py
backend/src/infrastructure/api/schemas/: create_group_schema.py  create_role_schema.py  create_user_schema.py  logout_schema.py  update_user_password_schema.py
backend/src/infrastructure/models/: group_model.py  role_model.py  user_group_link.py  user_model.py  user_role_link.py
backend/src/infrastructure/repositories/: database_repository.py  role_database_repository.py  user_database_repository.py
backend/src/service/: formative_service.py  group_repository.py  role_repository.py  user_repository.py
backend/tests/: conftest.py
backend/tests/infrastructure/repositories/: test_group_database_repository.py  test_role_database_repository.py  test_user_database_repository.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
public/: actions.json  forms.json
src/: App.vue  main.js
(+36 files in other folders)
